# obid

./: .release.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.MD  README.md  cliff.toml  package-lock.json  package.json  release.toml
.github/workflows/: rust.yml
.husky/: pre-commit
src/: byte_gen.rs  lib.rs  serde.rs
