[package]
name = "obid"
version = "0.1.1"
edition = "2024"
description = "A Rust implementation of the ObjectId data type as defined in the BSON specification."
license = "GPL-3.0-only"
license-file = "LICENSE"
authors = ["Andrea Coronese <sixpounder@protonmail.com>"]
readme = "README.md"
categories = ["cryptography", "algorithms"]

[dependencies]
chrono = "0.4.44"
rkyv = { version = "0.8.16", optional = true }
thiserror = "2.0.18"
gethostname = "1.1.0"
getrandom = "0.4.2"
libc = "0.2.186"
rand = "0.10.1"

[features]
default = []
archive = ["rkyv"]
