[package]
name = "obid"
version = "0.3.1"
edition = "2024"
description = "A Rust implementation of the ObjectId data type as defined in the BSON specification."
license = "GPL-3.0-only"
authors = ["Andrea Coronese <sixpounder@protonmail.com>"]
readme = "README.md"
categories = ["cryptography", "algorithms"]
documentation = "https://docs.rs/obid/"
homepage = "https://github.com/sixpounder/obid"
repository = "https://github.com/sixpounder/obid"

[dependencies]
rkyv = { version = "0.8.16", optional = true }
thiserror = "2.0.18"
gethostname = "1.1.0"
getrandom = "0.4.2"
libc = "0.2.186"
rand = "0.10.1"
serde = { version = "1.0", optional = true }
time = { version = "0.3.47", default-features = false, features = ["alloc", "local-offset", "formatting"] }

[dev-dependencies]
serde_json = { version = "1.0" }

[features]
default = []
archive = ["dep:rkyv"]
serde = ["dep:serde"]
